<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/itAddKhoaHoc"
        android:orderInCategory="100"
        android:title="@string/Add_Khoa_Hoc"
        app:showAsAction="never" />
    <item
        android:id="@+id/itJoinKhoaHoc"
        android:orderInCategory="100"
        android:title="@string/JoinKhoaHoc"
        app:showAsAction="never" />
    <item
        android:id="@+id/itApply"
        android:title="@string/itsearch"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"

        />
</menu>
