<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/add"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/com_facebook_button_background_color"
        />
    <LinearLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_Class"
            android:layout_marginRight="10dp"
            />

        <EditText
            android:textColorHint="@color/com_facebook_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_Class"/>
    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginRight="10dp"
            />
        <EditText
            android:textColorHint="@color/com_facebook_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"/>
    </LinearLayout>


</LinearLayout>